--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "env-cmd -f ./.env.prod nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "export NODE_ENV=dev&& nest start --watch",
+    "start:dev": "env-cmd -f ./.env.dev nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "export NODE_ENV=prod&& node dist/main",
+    "start:prod": "env-cmd -f ./.env.prod node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -33,6 +33,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "env-cmd": "^10.1.0",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
